--- a/Assets/Admin/Documents/Highlight/new.twig
+++ b/Assets/Admin/Documents/Highlight/new.twig
@@ -32,6 +32,12 @@
 				<rbs-field-rich-text property="description" 
 					label="{{ i18nAttr(propertyKey('Rbs_Highlight_Highlight', 'description'), ['ucf']) }}">
 				</rbs-field-rich-text>
+
+				<h3>{{ i18n(propertyKey('Rbs_Highlight_Highlight', 'items'), ['ucf']) }}</h3>
+				<rbs-inline-array inline-array="document.items" new-model="Rbs_Highlight_HighlightItem"
+						data-ref-lcid="document.refLCID">
+				</rbs-inline-array>
+
 			</fieldset>
 
 			<fieldset data-rbs-editor-section="activation"
