--- a/Assets/Admin/Documents/Highlight/new.twig
+++ b/Assets/Admin/Documents/Highlight/new.twig
@@ -21,23 +21,9 @@
 					</select>
 				</rbs-field>
 
-				<rbs-field-text property="label" required="true"
-					label="{{ i18nAttr(propertyKey('Rbs_Highlight_Highlight', 'label'), ['ucf']) }}">
-				</rbs-field-text>
+				<hr />
 
-				<rbs-field-text property="title" 
-					label="{{ i18nAttr(propertyKey('Rbs_Highlight_Highlight', 'title'), ['ucf']) }}">
-				</rbs-field-text>
-
-				<rbs-field-rich-text property="description" 
-					label="{{ i18nAttr(propertyKey('Rbs_Highlight_Highlight', 'description'), ['ucf']) }}">
-				</rbs-field-rich-text>
-
-				<h3>{{ i18n(propertyKey('Rbs_Highlight_Highlight', 'items'), ['ucf']) }}</h3>
-				<rbs-inline-array inline-array="document.items" new-model="Rbs_Highlight_HighlightItem"
-						data-ref-lcid="document.refLCID">
-				</rbs-inline-array>
-
+				{% include '@Rbs_Highlight/Documents/Highlight/properties.twig' %}
 			</fieldset>
 
 			<fieldset data-rbs-editor-section="activation"
